--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Özgün Akaoğlu &#183; Portfolio</title>
-  <!-- Fonts -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <!-- CSS Files -->
+
   <link rel="stylesheet" href="styles/general.css" />
   <link rel="stylesheet" href="styles/header.css" />
   <link rel="stylesheet" href="styles/main-content.css" />
@@ -20,6 +20,17 @@
 </head>
 
 <body>
+
+  <!-- Splash Screen -->
+  <div class="splash">
+    <div class="splash-content">
+      <h1>Welcome.</h1>
+      <p>&#169; Özgün Beste Akaoğlu</p>
+    </div>
+  </div>
+
+  <div class="gradient-background"></div>
+
   <!-- Header -->
   <header class="site-header">
     <div class="header-left">
@@ -31,7 +42,6 @@
     <nav class="header-right">
       <a href="#work" class="nav-link">WORK</a>
       <a href="#about" class="nav-link">ABOUT</a>
-      <a href="#library" class="nav-link">LIBRARY</a>
     </nav>
   </header>
 
@@ -39,15 +49,15 @@
   <section class="intro-section">
     <div class="intro-content">
       <div class="intro-row">
-        <span class="intro-text slide-up">HI THERE!</span>
-        <img src="images/intro-1f.png" alt="Creative Dev" class="intro-image-1 slide-in-right">
+        <span class="intro-text slide-up">HI! I'M ÖZGÜN,</span>
+        <img src="images/intro-1.png" alt="Creative Dev" class="intro-image-1 slide-in-right">
       </div>
       <div class="intro-row">
-        <span class="intro-text slide-up">I'M ÖZGÜN FROM</span>
+        <span class="intro-text slide-up">AN ARCHITECTURE STUDENT</span>
       </div>
       <div class="intro-row">
-        <img src="images/intro-3.png" alt="Designer From" class="intro-image-2 slide-in-left">
-        <span class="intro-text slide-up">TURKEY.</span>
+        <img src="images/intro-2.png" alt="Designer From" class="intro-image-2 slide-in-left">
+        <span class="intro-text slide-up"> FROM TURKEY.</span>
       </div>
     </div>
   </section>
@@ -72,7 +82,7 @@
     </div>
   </section>
 
-  <!-- Works Section -->
+  <!-- Work Section -->
   <section class="works-section" id="work">
     <a href="works-page.html" class="my-works-title">MY WORK</a>
     <div class="work-item left">
@@ -153,12 +163,12 @@
         <ul>
           <li><a href="#work">Work</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#library">Library</a></li>
         </ul>
       </div>
   </footer>
 
 </body>
+
 </html>
   
  
