--- a/works-page.html
+++ b/works-page.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Work &#183; Özgün Akaoğlu</title>
-  <!-- Fonts -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <!-- CSS Files -->
+
   <link rel="stylesheet" href="styles/general.css" />
   <link rel="stylesheet" href="styles/header.css" />
   <link rel="stylesheet" href="styles/works-page.css" />
@@ -19,6 +19,8 @@
 </head>
 
 <body>
+
+  <div class="gradient-background"></div>
 
   <div class="vertical-header">
     <div class="header-top">
@@ -34,7 +36,7 @@
   <div class="horizontal-scroll">
 
     <section class="panel image-panel">
-      <img src="images/work-4.2.png" alt="Full Height Image" />
+      <img src="images/work-2.2.png" alt="Full Height Image" />
     </section>
     <section class="panel text-panel">
       <h1 class="work-title">STEEL-CONCRETE COMPOSITE CONSTRUCTION PROJECT (2023)</h1>
@@ -45,7 +47,7 @@
     </section>
 
     <section class="panel image-panel">
-      <img src="images/work-4.3.jpg" alt="Full Height Image" />
+      <img src="images/work-2.3.jpg" alt="Full Height Image" />
     </section>
     <section class="panel text-panel">
       <h1 class="work-title">About</h1>
@@ -57,5 +59,4 @@
 
   </div>
 
-  
 </body>
