--- a/works-page.html
+++ b/works-page.html
@@ -28,7 +28,7 @@
     </div>
     <div class="header-bottom">
       <a href="index.html" class="logo-link">
-        <img src="images/logo.svg" alt="Logo" class="logo" />
+        <img src="images/LOGO.svg" alt="Logo" class="logo" />
       </a>
     </div>    
   </div>
